@@ -27,6 +27,10 @@ flags of ffmpeg.
 \fB\-t\fR<n>
 : time to seek to (percentage) (default: 10)
 .TP
+\fB\-a\fR
+: ignore aspect ratio and generate square thumbnail
+.TP
+
 \fB\-f\fR
 : create a movie strip overlay
 .TP
